--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "promises",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,8 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.5.1",
     "jquery": "^3.4.1",
+    "mongoose": "^5.7.10",
     "request": "^2.88.0",
-    "mongoose": "^5.7.7"
-  }
+    "request-promise": "^4.2.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chana987/safe-side.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chana987/safe-side/issues"
+  },
+  "homepage": "https://github.com/chana987/safe-side#readme",
+  "description": ""
 }
