--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.5.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.10",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
